--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                         A good example of generating html dynamically.
                       </p>
 
-                      <p class="card__project-text">Deployed on Netify.<br /><br /><br /></p>
+                      <p class="card__project-text">Deployed on Netlify.<br /><br /><br /></p>
                     </div>
                     <div class="card-buttons">
                       <a
@@ -740,59 +740,65 @@
           </div>
         </div>
         <!-- cardend -->
-        <div class="u-center-text">
+        <div class="u-center-text u-margin-bottom-medium">
           <a href="#popup" class="btn btn--green">Other Projects</a>
         </div>
       </section>
 
-      <!-- <section class="section-book" id="section-book">
+      <section class="section-book" id="section-book">
         <div class="row">
           <div class="book">
             <div class="book__form">
               <form action="#" class="form">
                 <div class="u-margin-bottom-medium">
                   <h2 class="heading-secondary">
-                    Start booking now
+                    Contact Me
                   </h2>
                 </div>
+                <div class="column-container">
+                  <div class="form-column">
                 <div class="form__group">
                   <input
                     type="text"
                     class="form__input"
-                    placeholder="Full Name"
+                    placeholder="Your Name"
                     id="name"
                     required
                   />
-                  <label for="name" class="form__label">Full Name</label>
+                  <label for="name" class="form__label">Your Name</label>
                 </div>
                 <div class="form__group">
                   <input type="email" class="form__input" placeholder="Email" id="email" required />
                   <label for="email" class="form__label">Email</label>
                 </div>
+                <div class="form__group">
+                  <input type="phone" class="form__input" placeholder="Phone" id="phone" required />
+                  <label for="phone" class="form__label">Email</label>
+                </div>
+              </div>
 
+              <div class="form-column">
+                <div class="form__group">
+                <textarea class="form__input" placeholder="Message" name="message" id="message"  ></textarea>
+                <label for="message" class="form__label">Message</label>
+              </div>
+              </div>
+
+
+
+            </div>
                 <div class="form__group u-margin-bottom-medium">
-                  <div class="form__radio-group">
-                    <input type="radio" class="form__radio-input" id="small" name="group-size" />
-                    <label for="small" class="form__radio-label">
-                      <span class="form__radio-button"></span> Small tour group</label
-                    >
-                  </div>
-                  <div class="form__radio-group">
-                    <input type="radio" class="form__radio-input" id="large" name="group-size" />
-                    <label for="large" class="form__radio-label">
-                      <span class="form__radio-button"></span>Large tour group</label
-                    >
-                  </div>
+                 
                 </div>
 
-                <div class="form__group">
-                  <button class="btn btn--green">Next steps &rarr;</button>
+                <div class="form__group contact-submit">
+                  <button class="btn btn--green ">Launch&rarr;</button>
                 </div>
               </form>
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <footer class="footer">
@@ -811,7 +817,7 @@
         </picture>
       </div>
       <div class="row">
-        <div class="col-1-of-2">
+        <!-- <div class="col-1-of-2">
           <div class="footer__navigation">
             <ul class="footer__list">
               <li class="footer__item">
@@ -831,13 +837,17 @@
               </li>
             </ul>
           </div>
-        </div>
-        <div class="col-1-of-2">
+        </div> -->
+        <div >
           <p class="footer__copyright">
             <a href="#" class="footer__link"></a>
-            <a href="#" class="footer__link"> </a>
-            Copyright &copy; by thomaskdev
+            <a href="#" class="footer__link">Copyright &copy; by thomaskdev </a>
+            <!-- Copyright &copy; by thomaskdev -->
+            <!-- <a href="thomas@thomaskdev.io">thomas@thomaskdev.io</a> -->
+            <a href="mailto:thomas@thomaskdev.io">thomas@thomaskdev.io</a>
+            <a href="tel:5551234567">phone: (970) 712-1797</a>
           </p>
+          <!-- <a href="thomas@thomaskdev.io">thomas@thomaskdev.io</a> -->
         </div>
       </div>
     </footer>
