--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
       <!-- <section class="section-projects"> -->
       <section class="section-projects">
-        <div class="u-center-text u-margin-bottom-big">
+        <div class="u-center-text u-margin-bottom-big u-margin-top-big">
           <h2 class="heading-secondary" id="section-projects">
             SAMPLE PROJECTS
           </h2>
