--- a/public/index.html
+++ b/public/index.html
@@ -768,7 +768,7 @@
               <!-- <form action="/contact" method="post" class="form"> -->
               <form  method="post" action="/addContact" class="form">
                 <div class="u-margin-bottom-medium">
-                  <h2 class="heading-secondary">
+                  <h2 class="heading-secondary " style="color:white">
                     Contact Me
                   </h2>
                 </div>
