--- a/public/index.html
+++ b/public/index.html
@@ -287,8 +287,8 @@
   <div class="project__row">
 
   <!-- card 1   -->
-<div class="flip-card">
-  <div class="flip-card-inner">
+<div class="flip-card flip-card-over">
+  <div class="flip-card-inner flip-card-inner-over">
     <div class="flip-card-front">
       <div class="flip-card-picture flip-card-picture--1">
         &nbsp;
