--- a/public/index.html
+++ b/public/index.html
@@ -287,8 +287,8 @@
   <div class="project__row">
 
   <!-- card 1   -->
-<div class="flip-card flip-card-over">
-  <div class="flip-card-inner flip-card-inner-over">
+<div class="flip-card" id="flip-1">
+  <div class="flip-card-inner flip-card-inner-over" id="flip-1-b">
     <div class="flip-card-front">
       <div class="flip-card-picture flip-card-picture--1">
         &nbsp;
@@ -344,8 +344,8 @@
 <!-- card end -->
 
 <!-- card 2   -->
-<div class="flip-card">
-  <div class="flip-card-inner">
+<div class="flip-card flip-card-over">
+  <div class="flip-card-inner flip-card-inner-over">
     <div class="flip-card-front">
       <div class="flip-card-picture flip-card-picture--2">
         &nbsp;
@@ -405,8 +405,8 @@
 
 <!-- card 3 -->
 
-<div class="flip-card">
-  <div class="flip-card-inner">
+<div class="flip-card flip-card-over">
+  <div class="flip-card-inner flip-card-inner-over">
     <div class="flip-card-front">
       <div class="flip-card-picture flip-card-picture--3">
         &nbsp;
@@ -465,8 +465,8 @@
 
 <!-- card 4 -->
 
-<div class="flip-card">
-  <div class="flip-card-inner">
+<div class="flip-card flip-card-over">
+  <div class="flip-card-inner flip-card-inner-over">
     <div class="flip-card-front">
       <div class="flip-card-picture flip-card-picture--4">
         &nbsp;
@@ -525,8 +525,8 @@
 
 <!-- card 5 -->
 
-<div class="flip-card">
-  <div class="flip-card-inner">
+<div class="flip-card flip-card-over">
+  <div class="flip-card-inner flip-card-inner-over">
     <div class="flip-card-front">
       <div class="flip-card-picture flip-card-picture--5">
         &nbsp;
@@ -585,8 +585,8 @@
 
 <!-- card 6 -->
 
-<div class="flip-card">
-  <div class="flip-card-inner">
+<div class= "flip-card flip-card-over">
+  <div class="flip-card-inner flip-card-inner-over">
     <div class="flip-card-front">
       <div class="flip-card-picture flip-card-picture--6">
         &nbsp;
@@ -645,8 +645,8 @@
 
 <!-- card 7 -->
 
-<div class="flip-card">
-  <div class="flip-card-inner">
+<div class="flip-card flip-card-over">
+  <div class="flip-card-inner flip-card-inner-over">
     <div class="flip-card-front">
       <div class="flip-card-picture flip-card-picture--7">
         &nbsp;
@@ -703,8 +703,8 @@
 
 <!-- card 8 -->
 
-<div class="flip-card">
-  <div class="flip-card-inner">
+<div class="flip-card flip-card-over">
+  <div class="flip-card-inner flip-card-inner-over">
     <div class="flip-card-front">
       <div class="flip-card-picture flip-card-picture--8">
         &nbsp;
