--- a/public/index.html
+++ b/public/index.html
@@ -288,7 +288,7 @@
 
   <!-- card 1   -->
 <div class="flip-card" id="flip-1">
-  <div class="flip-card-inner flip-card-inner-over" id="flip-1-b">
+  <div class="flip-card-inner flip-card-inner-over" >
     <div class="flip-card-front">
       <div class="flip-card-picture flip-card-picture--1">
         &nbsp;
@@ -307,7 +307,7 @@
       </div>
     </div>
     <!-- back -->
-    <div class="flip-card-back">
+    <div class="flip-card-back" id="flip-1-b">
       <div class="flip-card-back-detail">
         <h1 class="flip-card-back-title">Developer Connector</h1>
       
