--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
     <header class="header">
       <div class="header__logo-box">
-        <img src="img/logo5.png" alt="logo" class="header__logo" />
+        <img src="img/logo-full.png" alt="logo" class="header__logo" />
       </div>
       <div class="header__text-box">
         <h1 class="heading-primary">
@@ -861,40 +861,19 @@
     <footer class="footer">
       <div class="footer__logo-box">
         <picture class="footer__logo">
-          <source
+          <!-- <source
             srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
             media="(max-width: 37.5em)"
-          />
+          /> -->
           <!-- <img
             src="img/logo-green-2x.png"
             srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
             alt="Full logo"
           /> -->
-          <img src="img/logo5.png" height="100" width="auto" alt="Full logo" />
+          <img src="img/logo-full.png" height="100" width="auto" alt="Full logo" class="footer__logo" />
         </picture>
       </div>
       <div class="row">
-        <!-- <div class="col-1-of-2">
-          <div class="footer__navigation">
-            <ul class="footer__list">
-              <li class="footer__item">
-                <a href="#" class="footer__link">Company</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">Contact Us</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">Careers</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">Privacy</a>
-              </li>
-              <li class="footer__item">
-                <a href="#" class="footer__link">Terms</a>
-              </li>
-            </ul>
-          </div>
-        </div> -->
         <div>
           <p class="footer__copyright">
             <a href="#" class="footer__link"></a>
