--- a/public/index.html
+++ b/public/index.html
@@ -831,7 +831,7 @@
                       </div>
                     </div>
                   </div>
-                  <h3 style="color:whitesmoke; margin-left: 3rem;">Or call me at 970-712-1797</h3>
+                  <h3 style="color:whitesmoke; margin-left: 3rem;"><a style="color:whitesmoke; "href="tel:5551234567"> or phone: (970) 712-1797</a></h3>
   
                   <div class="form__group u-margin-bottom-medium"></div>
   
