--- a/public/index.html
+++ b/public/index.html
@@ -880,7 +880,7 @@
             <a href="#" class="footer__link">Copyright &copy; by thomaskdev </a>
             <!-- Copyright &copy; by thomaskdev -->
             <!-- <a href="thomas@thomaskdev.io">thomas@thomaskdev.io</a> -->
-            <a href="mailto:thomas@thomaskdev.io">thomas@thomaskdev.io</a>
+            <a href="mailto:tomkent32123@gmail.com">tomkent32123@gmail.com</a>
             <a href="tel:5551234567">phone: (970) 712-1797</a>
           </p>
           <!-- <a href="thomas@thomaskdev.io">thomas@thomaskdev.io</a> -->
