--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
               <p class="bio__content-text">
                 
 
-                <a href="/thomaskresume.pdf" class="btn-text" download="Thomas Hurd resume">
+                <a href="/thomaskresume.pdf" class="btn-text" download>
                   Down load my resume &rarr;
                 </a>
               </p>
