--- a/public/index.html
+++ b/public/index.html
@@ -690,7 +690,7 @@
         >APP</a
       >
       <a
-      href="https://tomkent321.github.io/newTech/"
+      href="https://github.com/tomkent321/newTech"
         target="_blank"
         class="flip-btn--code"
         >CODE</a
